--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </header>
 
     <nav>
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="suggestion.html">Internships</a>
         <a href="Review.html">Reviews</a>
