--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="suggestion.html">Internships</a>
-        <a href="Review.html">Reviews</a>
+        <a href="review.html">Reviews</a>
         <a href="contact.html">Contact</a>
     </nav>
 
